# trino-lb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  Tiltfile  default.nix  example-config.yaml  rust-toolchain.toml
.github/workflows/: build.yaml  pr_pre-commit.yaml  release.yaml
_TEST/: query-finished.json  response-that-links-to-s3.json
deploy/: namespace.yaml
deploy/helm/trino-lb/: Chart.yaml  values.yaml
deploy/helm/trino-lb/charts/: redis-cluster-10.2.3.tgz  redis-cluster-9.1.3.tgz
deploy/helm/trino-lb/configs/: trino-lb-config.yaml
deploy/helm/trino-lb/dashboards/: trino-loadbalancer.json
deploy/helm/trino-lb/templates/: certificates.yaml  config.yaml  deployment.yaml  grafana-dashboards.yaml  prometheus-service-monitor.yaml  service.yaml  serviceaccount.yaml  trinos.yaml
docker/: Dockerfile
docs/: design.md  example-setups.md  proxy-modes.md
docs/persistence/: in-memory.md  index.md  postgres.md  redis.md
docs/routing/: ClientTagsRouter.md  ExplainCostsRouter.md  PythonScriptRouter.md  TrinoRoutingGroupHeaderRouter.md  index.md
docs/scaling/: index.md  stackable.md
example-configs/: dev-local-with-tracing.yaml  docker-simple-single-trino.yaml  ha-redis-autoscaling-stackable.yaml  simple-no-trino.yaml  simple-single-trino.yaml
nix/: meta.json  sources.json
scripts/: run-tests
tests/: release.yaml  test-definition.yaml
tests/templates/kuttl/client-spooling/: 00-trino-lb-certificates.yaml  01-minio-secrets.yaml  02-install-minio.yaml.j2  02_helm-bitnami-minio-values.yaml.j2  10-assert.yaml  10-install-trino-catalogs.j2  10-install-trino.yaml.j2  20-install-trino-lb.j2  20_trino-lb-config.yaml.j2  30-assert.yaml  30-test-queries.yaml.j2
tests/templates/kuttl/smoke/: 00-rbac.yaml.j2  00-trino-lb-certificates.yaml  01-assert.yaml.j2  01-install-postgres.yaml.j2  01_helm-bitnami-postgresql-values.yaml.j2  02-assert.yaml.j2  02-install-redis.yaml.j2  10-assert.yaml  10-install-trino-catalogs.j2  10-install-trino.yaml.j2  10-install-trinos.yaml.j2  20-assert.yaml  20-install-trino-lb.j2  20_trino-lb-config.yaml.j2  30-assert.yaml  30-send-queries.yaml.j2  30-test-queries.yaml.j2  40-change-routing.j2  40_trino-lb-config.yaml.j2  41-restart-trino-lb.yaml  50-assert.yaml  50-test-routing.yaml.j2  60-change-proxy-mode.j2  60_trino-lb-config.yaml.j2  70-assert.yaml  70-test-proxy-mode.yaml.j2
trino-lb/: Cargo.toml
trino-lb-bench/: Cargo.toml
trino-lb-bench/src/: args.rs  main.rs
trino-lb-core/: Cargo.toml
trino-lb-core/src/: config.rs  lib.rs  sanitization.rs  trino_api.rs  trino_cluster.rs  trino_query.rs  trino_query_plan.rs
trino-lb-core/src/trino_api/: mod.rs  queries.rs  stats.rs  trino_events.rs
trino-lb-core/tests/sample_trino_events/: query_created.json  query_finished.json
trino-lb-persistence/: Cargo.toml
trino-lb-persistence/.sqlx/: query-13136091bd8f836d3ffb375a8cccb6de40c4d3dc33037167933c259cd44bbf39.json  query-1f8cc8bc6093d2fc198d0b2849568b812633632a68235f2fa26f80a9c5352ded.json  query-250059efd9c61d81e5f0aa43056434ea4a5b0cbdbe5bce6ded1d6004bda5faf9.json  query-2e161fe945e38e80bf51e619be752266c1c55c458affe9d41fc9a64f0b16828e.json  query-3de07ae52077efd96ead2d363896a11eac6817d60d09392f16058ce2b10aa053.json  query-71ff84b7dc23376bc6396589a2bc983042ddc8fc5f2da2f023bc78268e5724a4.json  query-724e5ffa3990086e8c7e69ce67378632ff076482875ccff7d43b57ee4753cdb4.json  query-7c9677b7bc71bf1e2c3733abfb4caede4c9e6eeda430fc07e578810b2ec1638c.json  query-96f9bae6daaccebc195c00118586dab4c379cd89f1342ddd58fd692dd9cee17e.json  query-aea30782a6bcc257183abafde2aa6d39904273164cb97e98f133a6adaada42f8.json  query-c96bb3397332e6c9d9b47239ffadd90620ba1316eb2ffa861524751991097ce9.json  query-cc5d896519e430a8f7cc1b84cd97965541fcb1dac92849ff572950c424db9048.json  query-d6b1cc38b5e80b51b157d1989beec66a68126c1606a1ae39caeed6ecd380b9f1.json  query-da2102a327e1973582ee4b6454564194c97176d89e61422c6634060a311ace4d.json  query-dcdff617008bd9e5db76c1aa6099da4728bca33d362d6ff990e14b7e4b17288b.json  query-e727412091850e7ac76082775abe9250d852451790bb2509b260fafdb268b6b1.json
trino-lb-persistence/src/: in_memory.rs  lib.rs  redis.rs
trino-lb-persistence/src/postgres/: README.md  mod.rs
trino-lb-persistence/src/postgres/migrations/: 20240104201957_queued_queries.sql  20240104201958_queries.sql  20240104201959_cluster_query_counts.sql  20240104201960_cluster_states.sql  20240104201961_last_query_count_fetcher_update.sql  20260101314410_add_trino_external_endpoint.sql
trino-lb-persistence/src/redis/: mod.rs  redis_cluster.rs  singe_redis.rs
trino-lb/src/: args.rs  cluster_group_manager.rs  error_formatting.rs  main.rs  metrics.rs  tracing.rs
trino-lb/src/http_server/: metrics.rs  mod.rs
trino-lb/src/http_server/admin/: mod.rs
trino-lb/src/http_server/ui/: index.rs  mod.rs  query.rs
trino-lb/src/http_server/v1/: mod.rs  proxy.rs  statement.rs  trino_event_listener.rs
trino-lb/src/maintenance/: leftover_queries.rs  mod.rs  query_count_fetcher.rs
trino-lb/src/routing/: client_tags.rs  explain_costs.rs  mod.rs  python_script.rs  trino_routing_group_header.rs
trino-lb/src/scaling/: config.rs  mod.rs  stackable.rs
trino-lb/src/trino_client/: cluster_info.rs  mod.rs  workarounds.rs
trino-lb/templates/: index.html
