[workspace]
members = ["trino-lb", "trino-lb-persistence", "trino-lb-core", "trino-lb-bench"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/stackabletech/trino-lb"

[workspace.dependencies]
axum = { version = "0.7", features = ["tracing"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"]}
enum_dispatch = "0.3.12"
futures = "0.3"
http = "1.0"
http-serde = "2.0.0"
humantime-serde = "1.0"
indoc = "2.0"
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_29"] }
kube = { version = "0.88", default-features = false, features = ["client", "jsonpatch", "runtime", "rustls-tls"] }
main_error = "0.1"
num_cpus = "1.0"
number_prefix = "0.4"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-http = "0.11"
opentelemetry-otlp = { version = "0.15", features = ["serialize", "metrics"] }
opentelemetry-prometheus = "0.15"
prometheus = "0.13"
prusto = "0.5.1"
pyo3 = { version = "0.20", features = ["auto-initialize"]}
rand = "0.8"
redis = { version = "0.24", default-features = false, features = ["acl", "tokio-rustls-comp", "cluster", "cluster-async", "connection-manager", "keep-alive", "script"]}
regex = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip", "cookies"] }
rstest = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "macros", "json", "chrono", "postgres" ] }
strum = { version = "0.26", features = ["derive" ] }
tokio = "1.34"
tower = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
url = { version = "2.5", features = ["serde"] }

# For trino-lb-bench
indicatif = "0.17"

[patch.crates-io]
prusto = { git = "https://github.com/sbernauer/prusto.git", branch = "feat/derive-name-attribute" }
# https://github.com/launchbadge/sqlx/pull/2927 was merged but we need to wait for a release
sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "b4269b7c865f05701fd0d2d1da1b2d8be7a159b8" }
