[workspace]
members = ["trino-lb", "trino-lb-persistence", "trino-lb-core", "trino-lb-bench"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/stackabletech/trino-lb"

[workspace.dependencies]
axum = { version = "0.7", features = ["tracing"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"]}
enum_dispatch = "0.3"
futures = "0.3"
http = "1.1"
http-serde = "2.0"
humantime-serde = "1.1"
indoc = "2.0"
k8s-openapi = { version = "0.22", default-features = false, features = ["v1_30"] }
kube = { version = "0.91", default-features = false, features = ["client", "jsonpatch", "runtime", "rustls-tls"] }
main_error = "0.1"
num_cpus = "1.16"
number_prefix = "0.4"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-http = "0.11"
opentelemetry-otlp = { version = "0.15", features = ["serialize", "metrics"] }
opentelemetry-prometheus = "0.15"
prometheus = "0.13"
prusto = "0.5"
pyo3 = { version = "0.21", features = ["auto-initialize"]}
rand = "0.8"
redis = { version = "0.25", default-features = false, features = ["acl", "tokio-rustls-comp", "cluster", "cluster-async", "connection-manager", "keep-alive", "script"]}
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "cookies"] }
rstest = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
# 0.7.4 is the first release that includes https://github.com/launchbadge/sqlx/pull/2927
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "macros", "json", "chrono", "postgres" ] }
strum = { version = "0.26", features = ["derive" ] }
tokio = "1.36"
tower = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
url = { version = "2.5", features = ["serde"] }

# For trino-lb-bench
indicatif = "0.17"

[patch.crates-io]
prusto = { git = "https://github.com/sbernauer/prusto.git", branch = "feat/derive-name-attribute" }
