[workspace]
members = [
  "trino-lb",
  "trino-lb-persistence",
  "trino-lb-core",
  "trino-lb-bench",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/stackabletech/trino-lb"

[workspace.dependencies]
askama = "0.14"
axum = { version = "0.8", features = ["tracing"] }
# If we use the feature "tls-rustls" it will pull in the "aws-lc-rs" crate, which as of 2024-08-16 I did not get to build in the "make run-dev" workflow :/
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
bincode = { version = "2.0", features = ["serde"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
enum_dispatch = "0.3"
futures = "0.3"
http = "1.1"
http-serde = "2.1"
humantime-serde = "1.1"
indoc = "2.0"
k8s-openapi = { version = "0.24", default-features = false, features = [
  "v1_32",
] }
kube = { version = "0.99", default-features = false, features = [
  "client",
  "jsonpatch",
  "runtime",
  "rustls-tls",
] }
main_error = "0.1"
num_cpus = "1.16"
number_prefix = "0.4"
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-http = "0.13"
opentelemetry-otlp = { version = "0.17", features = ["serialize", "gzip-tonic"] }
opentelemetry-prometheus = "0.17"
prometheus = "0.13"
prusto = "0.5"
pyo3 = { version = "0.24", features = ["auto-initialize"] }
rand = "0.9"
redis = { version = "0.29", default-features = false, features = [
  "acl",
  "tokio-rustls-comp",
  "cluster",
  "cluster-async",
  "connection-manager",
  "keep-alive",
  "script",
] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "gzip",
  "json",
  "cookies",
] }
rstest = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
snafu = "0.8"
# 0.7.4 is the first release that includes https://github.com/launchbadge/sqlx/pull/2927
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "json",
  "chrono",
  "postgres",
] }
strum = { version = "0.27", features = ["derive"] }
tokio = "1.39"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "tracing"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"

# For trino-lb-bench
indicatif = "0.17"

[patch.crates-io]
prusto = { git = "https://github.com/sbernauer/prusto.git", branch = "feat/derive-name-attribute-2" }
