[package]
name = "trino-lb-core"
description = "Core structs, such as configurations"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
chrono.workspace = true
http-serde.workspace = true
http.workspace = true
humantime-serde.workspace = true
number_prefix.workspace = true
opentelemetry-otlp.workspace = true
prusto.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
